# nextcloud_backup

./: Cargo.toml  README.md  nc_backup.service  nc_backup.timer  nc_backup@.service  nc_backup@.timer  nc_borg  nc_borg.service
src/: lib.rs  main.rs
src/backends/: config.rs  mariadb.rs  mod.rs
src/backends/snapper/: config.rs  mod.rs  snapshot.rs
src/cli/: mod.rs
src/nextcloud/: mod.rs  occ.rs
src/util/: retention.rs
