[package]
name = "nc_backup"
description = "Backup of Nextcloud data (incrementally), config and database"
authors = ["Julius Rüberg <julius.rueberg@protonmail.ch>"]
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
repository = "https://github.com/Toorero/nextcloud_backup"
keyword = ["nextcloud", "backup"]
categories = ["command-line-utilities", "config", "filesystem"]

[lib]
name = "nc_backup_lib"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
derive_more = { version = "2.0", features = ["display", "error"] }
env_logger = "0.11"
flate2 = "1.0"
log = "0.4"
regex = "1.11"
serde_json = "1.0"
