[package]
name = "nc_backup"
description = "Backup of Nextcloud data (incrementally), config and database"
authors = ["Julius Rüberg <julius.rueberg@protonmail.ch>"]
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
repository = "https://github.com/Toorero/nextcloud_backup"
keyword = ["nextcloud", "backup"]
categories = ["command-line-utilities", "config", "filesystem"]

[lib]
name = "nc_backup_lib"
path = "src/lib.rs"

[dependencies]
chrono = "~0.4.42"
clap = { version = "4.5.48", features = ["derive", "env"] }
derive_more = { version = "2.0.0", features = ["display", "error", "from"] }
env_logger = "~0.11.8"
flate2 = "1.1.2"
log = "~0.4.28"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "~0.9.7"
